Add trangchu.html file

--- a/trangchu.html
+++ b/trangchu.html
@@ -20,29 +20,29 @@
     <!-- <link rel="stylesheet" href="reset.css"> -->
   </head>
   <body>
-    <div class="all-header">
-        <header class="container">
+    <div class="all-header fixed">
+        <header class="container ">
             <div class="logo">
                 <img src="img/logo.webp" alt="" class="logo-img">
             </div>
             <ul class="nav-links">
                 <li>
-                    <a  href="#">Home</a>
+                    <a class="nav-links-item " href="#">Home</a>
                 </li>
                 <li>
-                    <a   href="#">About</a>
+                    <a class="nav-links-item" href="#">About</a>
                 </li>
                 <li>
-                    <a  href="#">Classes</a>
+                    <a class="nav-links-item" href="#">Classes</a>
                 </li>
                 <li>
-                    <a  href="#">Blog</a>
+                    <a class="nav-links-item" href="#">Blog</a>
                 </li>
                 <li>
-                    <a   href="#">Gallery</a>
+                    <a  class="nav-links-item" href="#">Gallery</a>
                 </li>
                 <li>
-                    <a  href="#">Contact</a>
+                    <a class="nav-links-item" href="#">Contact</a>
                 </li>
             </ul>
             <div class="sign-up">Sign up today</div>
